# SingleMachineScheduling

./: CMakeLists.txt  README.md  resultados_para_tabela.txt
data/: estrutura.txt  ils.csv  input.txt  instancia_100.txt  instancia_20.txt  instancia_50.txt  instancia_500.txt  instancia_precisa_100.txt  instancia_precisa_20.txt  instancia_precisa_200.txt  instancia_precisa_50.txt  optimal_values.txt  simulated_annealing.csv
fine_tuning/: n200_ft.txt
greedy/: n60A_construcao.txt  n60B_construcao.txt  n60C_construcao.txt  n60D_construcao.txt  n60E_construcao.txt  n60F_construcao.txt  n60G_construcao.txt  n60H_construcao.txt  n60I_construcao.txt  n60J_construcao.txt  n60K_construcao.txt  n60L_construcao.txt  n60M_construcao.txt  n60N_construcao.txt  n60O_construcao.txt  n60P_construcao.txt
ils/: n60B_resultados.txt  n60D_resultados.txt  n60G_resultados.txt  n60H_resultados.txt  n60I_resultados.txt  n60J_resultados.txt  n60K_resultados.txt  n60L_resultados.txt  n60M_resultados.txt  n60N_resultados.txt
logs/: execution_log_2024-09-13_13-31-27.txt  execution_log_2024-09-13_15-08-24.txt  execution_log_2024-09-14_20-27-43.txt  execution_log_2024-09-14_20-33-49.txt  execution_log_2024-09-14_20-34-25.txt  execution_log_2024-09-15_01-47-15.txt  execution_log_2024-09-15_01-54-38.txt  execution_log_2024-09-15_01-55-35.txt  execution_log_2024-09-15_02-06-16.txt  execution_log_2024-09-15_02-06-53.txt  execution_log_2024-09-15_02-15-06.txt  execution_log_2024-09-15_09-07-59.txt  execution_log_2024-09-15_09-08-35.txt  execution_log_2024-09-15_09-09-22.txt  execution_log_2024-09-15_09-10-13.txt  execution_log_2024-09-15_09-10-39.txt  execution_log_2024-09-15_09-15-21.txt  execution_log_2024-09-15_09-19-04.txt  execution_log_2024-09-15_09-20-20.txt  execution_log_2024-09-15_09-21-56.txt  execution_log_2024-09-15_09-22-59.txt  execution_log_2024-09-15_09-25-18.txt  execution_log_2024-09-15_09-25-57.txt  execution_log_2024-09-15_09-26-46.txt  execution_log_2024-09-15_09-39-45.txt  execution_log_2024-09-15_09-40-12.txt  execution_log_2024-09-15_09-42-27.txt  execution_log_2024-09-15_10-14-51.txt  execution_log_2024-09-15_10-15-56.txt  execution_log_2024-09-15_10-19-49.txt  execution_log_2024-09-15_10-20-45.txt  execution_log_2024-09-15_10-21-39.txt  execution_log_2024-09-15_13-25-09.txt  execution_log_2024-09-15_13-30-53.txt  execution_log_2024-09-15_13-38-08.txt  execution_log_2024-09-15_13-38-38.txt  execution_log_2024-09-15_13-51-31.txt  execution_log_2024-09-15_13-51-56.txt  execution_log_2024-09-15_13-54-05.txt  execution_log_2024-09-15_13-55-12.txt  (+40 more)
resultados_copa_apa/: n200A_resultados.txt  n60A_resultados.txt  resultados.txt
results/: n60A_resultados.txt  n60B_resultados.txt  n60C_resultados.txt  n60E_resultados.txt  n60F_resultados.txt  n60G_resultados.txt  n60I_resultados.txt  n60L_resultados.txt  n60O_resultados.txt  n60P_resultados.txt
results_guloso/: n60A_construcao.txt  n60D_construcao.txt  n60H_construcao.txt  n60I_construcao.txt  n60J_construcao.txt  n60M_construcao.txt  n60N_construcao.txt  n60P_construcao.txt
results_ils/: n60A_resultados.txt  n60B_resultados.txt  n60C_resultados.txt  n60D_resultados.txt  n60E_resultados.txt  n60F_resultados.txt  n60G_resultados.txt  n60H_resultados.txt  n60I_resultados.txt  n60J_resultados.txt  n60K_resultados.txt  n60L_resultados.txt  n60M_resultados.txt  n60N_resultados.txt  n60O_resultados.txt  n60P_resultados.txt
results_ils_old/: n60A_resultados.txt  n60B_resultados.txt  n60C_resultados.txt  n60E_resultados.txt  n60F_resultados.txt  n60G_resultados.txt  n60I_resultados.txt  n60K_resultados.txt  n60N_resultados.txt  n60O_resultados.txt  n60P_resultados.txt
results_local_search/: n200A_resultados.txt  n60A_resultados.txt  n60B_resultados.txt  n60C_resultados.txt  n60E_resultados.txt  n60F_resultados.txt  n60G_resultados.txt  n60H_resultados.txt  n60I_resultados.txt  n60J_resultados.txt  n60K_resultados.txt  n60M_resultados.txt  n60O_resultados.txt
(+40 files in other folders)
